# maia-axon

./: .gitignore
backend/: .env.example  .gcloudignore  Dockerfile  Dockerfile.prod  alembic.ini  cloudbuild.deploy.yaml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_conversation_title_icon.py  003_add_document_progress_fields.py  004_add_projects_and_decouple_conversations.py  005_add_companies_and_export_destinations.py  006_add_message_visualizations.py  007_add_feedback_tables.py  008_seed_shared_users.py  009_seed_marketing_companies.py  010_set_ads_login_customer_id.py  011_deduplicate_document_pages.py  012_promote_francis_to_admin.py  013_seed_coateq_company.py  014_seed_nelson_user.py  015_grant_all_users_all_groups.py  016_grant_all_users_all_companies.py  017_seed_general_projects.py  018_promote_citation_bbox_to_boxes.py  019_chunk_anchors_column.py  020_message_suggested_questions.py  021_annotations_table.py  022_document_printed_page_offset.py  023_document_sections.py  024_concept_graph.py  025_section_questions.py  026_mastery.py  027_learning_paths.py  028_chapter_groups.py
backend/app/: cli.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  database.py  redis.py  security.py  storage.py
backend/app/models/: __init__.py  annotation.py  chunk.py  company.py  concept.py  conversation.py  document.py  feedback.py  group.py  mastery.py  (+4 more)
backend/scripts/: backfill_chunk_anchors.py  backfill_equation_latex.py
backend/tests/: test_answer_engine_citations.py  test_math_extraction.py  test_sentence_anchors.py
(+153 files in other folders)
